# Practica

./: Algorithms.hpp  CMakeLists.txt  EventManager.hpp  EventManager.tpp  EventPayload.hpp  EventType.hpp  Function.hpp  LargeObject.cpp  LargeObject.hpp  List.cpp  List.hpp  List.tpp  ListIterator.hpp  ListIterator.tpp  ListNode.cpp  ListNode.hpp  ListNode.tpp  Main  Main.cpp  PriorityQueue.hpp  PriorityQueue.tpp  Queue.hpp  Queue.tpp  SynchPriorityQueue.hpp  SynchPriorityQueue.tpp  SynchronizedPriorityQueue.hpp  SynchronizedPriorityQueue.tpp  Task.hpp  Task.tpp  TaskArgument.hpp  TaskResult.hpp  TaskScheduler.hpp  TaskScheduler.tpp  Vector.cpp  Vector.hpp  Vector.tpp  VectorIterator.hpp  VectorIterator.tpp
